# private_facts

./: .gitignore  .readthedocs.yaml  .replit  README.md  README_generated.md  TEMPLATE.md  build-readme.py  hello.py  pyproject.toml  pytest.ini
docs/: requirements.txt
docs/source/: about.rst  conf.py  create.puml  decisions.rst  dict_store.puml  facts_record.puml  faq.rst  glossary.rst  howto-cli.rst  howto-setup.rst  howto.rst  index.rst  insert.puml  retrieve_content.puml  upload_content.puml
docs/source/about/: index.rst
docs/source/diagrams/: create.puml  privatefacts.css  update.puml
docs/source/reference/Tahoe-LAFS/: conf.py
docs/source/tutorials/: howto-cli.rst  howto-setup.rst  index.rst
fastapi/src/: blood_pressure.py  flow.py  health.py  heart_rate.py  main.py
fastapi/tests/: .coverage  conftest.py  facts_test.py  trivial_test.py  user_test.py
private_facts/: Dockerfile
private_facts/src/: QUESTIONS.md  fake_server.py  hello_local.py  hello_local_file.py  hello_local_filesystem.py
private_facts/src/client/: tahoe_rest_client.py
private_facts/src/gridsync/: __init__.py  crypto.py  filter.py  log.py  magic_folder.py  magic_folder_events.py  monitor.py  news.py  rootcap.py  settings.py  supervisor.py  system.py  tahoe.py  zkapauthorizer.py
private_facts/src/hello/: hello_local.py  hello_local_file.py  hello_local_file_contents.py  hello_local_filesystem.py  hello_world_out.txt  tahoe_client.py
private_facts/src/hello_world/: hello_world.py  hello_world.txt  hello_world2.py
private_facts/test/: conftest.py  gridsync_test.py  hello_local_test.py  hello_world_test.py  tahoe_client_test.py  tahoe_integration_test.py  test_build.py  test_fixtures.py
pubgrid-client/: tahoe.cfg
tahoe-server/: README.md
tahoe-server/client0/: running.process
tahoe-server/client0/private/: api_auth_token  logport.furl
tahoe-server/storage0/: running.process
tahoe-server/storage0/private/: api_auth_token  logport.furl
tahoe-server/storage0/storage/: bucket_counter.state.json  lease_checker.history.json  lease_checker.state.json
tahoe_python/src/client/: tahoe_client.py
