[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-facts"
version = "0.1.0"
description = "Tahoe-lafs example app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs==23.2.0",
    "cryptography<42",
    "sphinx>=8.1.3",
    "tahoe-lafs>=1.19.0",
    "wheel>=0.45.0",
]

[project.scripts]
hello = "private_facts.src.hello_world.hello_world:main"

[tool.hatch.build]
exclude = [
  "packages",
  "dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
