[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-facts"
version = "0.1.0"
description = "Tahoe-lafs example app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atomicwrites>=1.4.1",
    "attrs==23.2.0",
    "cryptography<42",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "pyqt6>=6.9.0",
    "pytest>=8.3.4",
    "pytest-twisted>=1.14.3",
    "python-decouple>=3.8",
    "qtpy>=2.4.3",
    "sphinx>=8.1.3",
    "tahoe-capabilities>=2023.1.5",
    "tahoe-lafs>=1.19.0",
    "watchdog>=6.0.0",
    "wheel>=0.45.0",
]

[project.scripts]
hello = "private_facts.src.hello.hello_local:main"
hello_file = "private_facts.src.hello.hello_local_file:main"
hello_system = "private_facts.src.hello.hello_local_filesystem:main"
hello_mutable = "private_facts.src.hello.hello_local_mutable:main"
fake_server = "private_facts.src.fake_server:main"

[tool.hatch.build]
exclude = [
  "packages",
  "dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
